# ai-native-textbook

./: .gitignore  404.html  README.md  docusaurus.config.ts  index.html  package-lock.json  package.json  sitemap.xml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
.specify/memory/: GEMINI.md  constitution.md
assets/css/: styles.1207a0ba.css  styles.d9c03315.css
assets/js/: 17896441.25684e9b.js  17896441.463e19c2.js  1df93b7f.4e53ef0c.js  1df93b7f.5b9ed123.js  1e4be8db.2c55b8ce.js  1f391b9e.995baea1.js  1f391b9e.9e0c5862.js  236a605b.07bc8fd0.js  237.81d8b127.js  237.a2c3a170.js  285.06406b7e.js  2bc06b61.4b3fa3ce.js  393be207.f006e148.js  5e95c892.573ed671.js  5e95c892.f8e5a9ab.js  87a0b7f4.5b6bf7ec.js  8c8a932e.8caeb324.js  a7456010.8c2ccf79.js  a7bd4aaa.932031e7.js  a94703ab.bc63b6fa.js  aba21aa0.1c18d447.js  b739335f.f8dece01.js  ba4c4dbf.ff0eab6f.js  ec70482a.a4e09b7a.js  (+7 more)
backend/: .env  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  chatbot.py  personalization.py  subagents.py  translation.py  user.py
backend/app/core/: config.py  qdrant_client.py
backend/app/models/: user.py  user_profile.py
backend/app/services/: diagram_agent.py  embedding_service.py  quiz_agent.py  summary_agent.py
backend/tests/: test_auth.py
docs/: introduction-to-robotics.mdx
markdown-page/: index.html
scripts/: ingest_content.py  post-phase1-agent-context-update.sh  rag_indexer.py
src/: .eslintrc.js  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tailwind.config.js  tsconfig.json
(+84 files in other folders)
